Change to use margin-bottom in Notification to handle overflow:hidden issue

--- a/packages/moonstone/styles/variables.less
+++ b/packages/moonstone/styles/variables.less
@@ -328,6 +328,12 @@
 @moon-notification-border-radius: 15px;
 @moon-notification-out-border-radius: 18px;
 @moon-notification-button-gap: 9px;
+@moon-notification-margin-bottom: 324px;
+@moon-notification-padding-left-right: 30px;
+@moon-notification-padding-top-botton: 24px;
+@moon-notification-min-width: 300px;
+@moon-notification-max-width: 978px;
+@moon-notification-wide-width: 1287px;
 
 // Tooltip
 // ---------------------------------------
