--- a/packages/ui/Transition/Transition.less
+++ b/packages/ui/Transition/Transition.less
@@ -2,14 +2,20 @@
 //
 @import "../styles/mixins.less";
 
-.transitionFrame {
-	overflow: hidden;
-}
-
 .transition {
+	pointer-events: none;
+
+	.inner > * {
+		pointer-events: auto;
+	}
+
 	&.slide {
-		transition-property: transform;
-		will-change: transform;
+		overflow: hidden;
+
+		.inner {
+			transition-property: transform;
+			will-change: transform;
+		}
 	}
 
 	&.fade .inner {
@@ -18,7 +24,7 @@
 	}
 
 	&.shown {
-		&.slide {
+		&.slide .inner {
 			transform: translate3d(0, 0, 0);
 		}
 
@@ -36,19 +42,19 @@
 
 	&.hidden {
 		&.slide {
-			&.up {
+			&.up .inner {
 				transform: translateY(-100%);
 			}
 
-			&.right {
+			&.right .inner {
 				transform: translateX(100%);
 			}
 
-			&.down {
+			&.down .inner {
 				transform: translateY(100%);
 			}
 
-			&.left {
+			&.left .inner {
 				transform: translateX(-100%);
 			}
 		}
